# germterm

./: .gitignore  BREAKING-CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  scratchbook.md
germterm/: Cargo.toml  README.md
germterm/benches/: frame.rs  gfx.rs
germterm/src/: cell.rs  color.rs  coord_space.rs  draw.rs  engine.rs  fps_counter.rs  fps_limiter.rs  frame.rs  layer.rs  lib.rs  particle.rs  rich_text.rs  screen.rs  style.rs
germterm/src/coord_space/: blocktad.rs  conversion.rs  mod.rs  native.rs  octad.rs  position.rs  size.rs  twoxel.rs
germterm/src/core/: mod.rs  timer.rs
germterm/src/core/buffer/: blended.rs  classic_diffed.rs  diffed.rs  flat.rs  layered.rs  mod.rs  paired.rs  slice.rs  test.rs  utils.rs
germterm/src/core/buffer/builder/: mod.rs  row.rs
germterm/src/core/compositor/: mod.rs
germterm/src/core/draw/: mod.rs  position.rs  rect.rs  size.rs
germterm/src/core/draw/gfx/: mod.rs  normal.rs  text.rs
germterm/src/core/renderer/: crossterm.rs  mod.rs
germterm/src/core/widget/: mod.rs
germterm/src/core/widget/block/: mod.rs  set.rs  title.rs
germterm/src/core/widget/text/: line.rs  mod.rs  span.rs
germterm/src/engine2/: mod.rs  timer.rs  widget.rs
germterm/src/engine2/buffer/: diffed.rs  flat.rs  mod.rs  paired.rs  slice.rs  test.rs  utils.rs
germterm/src/engine2/draw/: mod.rs  position.rs  rect.rs  size.rs
germterm/src/engine2/frame/: mod.rs
germterm/src/engine2/renderer/: crossterm.rs  mod.rs
germterm/src/engine2/widget/: mod.rs
germterm/src/engine2/widget/block/: mod.rs  set.rs
(+39 files in other folders)
