[workspace]
resolver = "3"
members = [
    "germterm",
    "examples/hello-world",
    "examples/standard-blending",
    "examples/octad-merging",
    "examples/blocktad-merging",
    "examples/octad-particles",
    "examples/twoxel-tester",
    "examples/twoxel-snake",
    "examples/particle-benchmark",
    "examples/erase-contents",
]

[workspace.package]
authors = ["Amy Opas <amy.opas@proton.me>"]
readme = "README.md"
repository = "https://github.com/thehuglet/germterm"
