[package]
name = "germterm"
description = "A lightweight high-performance terminal graphics framework!"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bitflags = "2.10.0"
crossterm = "0.29.0"
rand = "0.9.2"
termbg = "0.6.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "frame"
harness = false
